# code/controllers/DemoController.go
@@ -1,7 +1,11 @@
 package controllers
 
 import (
+	"encoding/json"
+	"fmt"
 	"mlz/code/vo"
+	"mlz/code/vo/req"
+	"mlz/conf"
 	"net/http"
 )
 import "github.com/gin-gonic/gin"
@@ -16,6 +20,7 @@ type Demo struct{
 
 
 type DemoController struct {
+	BaseController
 	*vo.RequestTemplate	`description:"继承标准结构"`
 	Data Demo 	`json:"data" description:"业务数据" "反倒是考虑; "`
 }
@@ -25,21 +30,37 @@ type DemoController struct {
 
 // @Summary 演示
 // @Produce  json
-// @Param	body	body	controllers.DemoController   true        "参数对象,注意,此参数应该被包含在通用参数的data属性内"
+// @Param	body	body	req.BaseSettingReqVO   true        "参数对象,注意,此参数应该被包含在通用参数的data属性内"
 // @Accept json
 // @Success 200 {string} json "{"code":0000,"data":{},"message":"","success":true}"
 // @Router /api/v1/demo/index [post]
 func (a *DemoController) Index(c *gin.Context) {
 
-	var json DemoController
-	if err := c.ShouldBindJSON(&json); err != nil {
-		c.JSON(http.StatusBadRequest, vo.FailValidate(err.Error()))
-		return
-	}
+	//var json entity.BaseSetting
+	//if err := c.ShouldBindJSON(&json); err != nil {
+	//
+	//	return
+	//}
+	aa, bb, err := conf.AppConfigObject.Db.Engine.Sqls("select * from base_setting").Execute()
 
-	c.JSON(http.StatusOK, vo.Success(json.Data))
+	fmt.Printf("%v , %v , %v ",aa,bb,err)
+	fmt.Println("")
+
+	setting := new(req.BaseSettingReqVO)
+	conf.AppConfigObject.Db.Engine.Where("id=?",161).Get(setting)
+json,_:=json.Marshal(setting)
+	fmt.Println("jsondata: " +string(json))
+
+	fmt.Println("")
+	c.JSON(http.StatusOK, vo.Success(json))
 }
 
+// @Summary 演示1
+// @Produce  json
+// @Param	body	body	entity.BaseSetting   true        "参数对象,注意,此参数应该被包含在通用参数的data属性内"
+// @Accept json
+// @Success 200 {string} json "{"code":0000,"data":{},"message":"","success":true}"
+// @Router /api/v1/demo/index1 [post]
 func (a *DemoController) Index1(c *gin.Context) {
 	name := c.Param("name")  //获取路径参数
 	firstname := c.DefaultQuery("firstname", "Guest")  //GET
@@ -63,5 +84,7 @@ func (a *DemoController) Index1(c *gin.Context) {
 	//            // 上传文件到指定的路径
 	//            // c.SaveUploadedFile(file, dst)
 	//        }
+
+
 	c.JSON(http.StatusOK, vo.Success(message+nick+name+ firstname))
 }
